Apartado 2 de anexos

--- a/docs/latex/bibliografiaAnexos.bib
+++ b/docs/latex/bibliografiaAnexos.bib
@@ -5,3 +5,53 @@
 	howpublished = {\url{https://es.wikipedia.org/wiki/Scrum_(desarrollo_de_software)}},
 	note = {Online; Accedido el 20-Abr-2024}
 }
+
+@misc{ online:zube,
+  	author = {Pivit Inc.},
+  	title = {\emph{Zube}},
+  	year = {2024},
+  	howpublished = {\url{https://zube.io/}},
+  	note = {Online; Accedido el 22-Abr-2024},
+}
+
+@misc{ wiki:cron,
+	author = {Wikipedia},
+	title = {\emph{cron (Unix)}},
+	year = {2024},
+	howpublished = {\url{https://es.wikipedia.org/wiki/Cron_(Unix))}},
+	note = {Online; Accedido el 04-Jun-2024}
+}
+
+@misc{ online:django_MVT_2,
+  	author = {Django},
+  	title = {\emph{Django documentation}},
+  	year = {2023},
+  	howpublished = {\url{https://docs.djangoproject.com/en/5.0/faq/general/}},
+  	note = {Online; Accedido el 20-Abr-2024},
+}
+
+@misc{ online:networkx,
+  	author = {NetworkX developers},
+  	title = {\emph{NetworkX}},
+  	year = {2024},
+  	howpublished = {\url{https://networkx.org/}},
+  	note = {Online; Accedido el 22-Abr-2024},
+}
+
+@misc{ online:licencia,
+  	author = {Creatice commons},
+  	title = {\emph{Licencia CC BY-NC-SA 4.0}},
+  	year = {2024},
+  	howpublished = {\url{https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1}},
+  	note = {Online; Accedido el 04-Jun-2024},
+}
+
+@article{1998IEEESpecifications,
+    title = {{IEEE Recommended Practice for Software Requirements Specifications}},
+    year = {1998},
+    journal = {IEEE Std 830-1998},
+    number = {},
+    pages = {1--40},
+    volume = {},
+    doi = {10.1109/IEEESTD.1998.88286}
+}
