--- a/docs/latex/anexos.tex
+++ b/docs/latex/anexos.tex
@@ -14,11 +14,20 @@
 \RequirePackage{xtab}
 \RequirePackage{multirow}
 
+% Landscape
+\usepackage{pdflscape}
+
 % Links
 \PassOptionsToPackage{hyphens}{url}\usepackage[colorlinks]{hyperref}
 \hypersetup{
 	allcolors = {red}
 }
+
+
+% Bibliografía (mejor natbib que biblatex. Con [numbers, sort] indico que
+% se numeren las referencias y que se ordenen según el orden de citación)
+% \usepackage[numbers]{natbib}
+\usepackage[sort,square,numbers,comma]{natbib}
 
 % Ecuaciones
 \usepackage{amsmath}
@@ -53,6 +62,25 @@
 		\includegraphics[width=0.9\textwidth]{#1}
 		\caption{#2}\label{fig:#1}
 	\end{figure}
+}
+
+% Para insertar una imagen sobrepasando los márgenes
+\usepackage[export]{adjustbox}
+%\newcommand{\imagenSinMargen}[2]{
+%    \begin{figure}[!h]
+%        \centering
+%        \includegraphics[width=1.3\textwidth, center]{#1} % Ajustar el ancho para que sobresalga del margen
+%        \caption{#2}\label{fig:#1}
+%    \end{figure}
+%    \FloatBarrier
+%}
+
+\newcommand{\imagenSinMargen}[2]{
+    \begin{figure}[!h]
+        \makebox[\textwidth][c]{\includegraphics[width=1.45\textwidth]{#1}} % Ajusta el ancho para sobresalir ambos márgenes
+        \caption{#2}\label{fig:#1}
+    \end{figure}
+    \FloatBarrier
 }
 
 
@@ -401,8 +429,24 @@
 \include{./tex/E_Manual_usuario}
 \include{./tex/F_ODS}
 
-
 \bibliographystyle{plain}
 \bibliography{bibliografiaAnexos}
+
+\newpage\null\thispagestyle{empty}
+
+% Imagen y texto de licencia al final de la memoria
+\newenvironment{bottompar}{\par\vspace*{\fill}}{\clearpage}
+
+\begin{bottompar}
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=4cm]{licencia}
+\end{figure}
+
+\begin{center}
+Esta obra está bajo una licencia Creative Commons Reconocimiento-NoComercial-CompartirIgual 4.0 Internacional\\
+(\href{https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1}{CC BY-NC-SA 4.0 DEED}).
+\end{center}
+\end{bottompar}
 
 \end{document}
